--- a/css/main.css
+++ b/css/main.css
@@ -18,20 +18,12 @@ html {
   overflow-x: hidden;
 }
 
-p {
-  font-size: 14px;
-  color: #546E7A;
-  line-height: 20px;
-  font-family: 'Open Sans', sans-serif;
-  margin-bottom: 0;
-}
-
 a:hover, a:focus {
-  color: #F97794;
+  color: #ff0000;
 }
 
 a {
-  color: #F97794;
+  color: #ff0000;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -73,7 +65,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 
 .bg-defult {
-  background: #F97794 !important;
+  background: #ff0000 !important;
 }
 
 /* ==========================================================================
@@ -106,7 +98,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   bottom: -8px;
   width: 80px;
   height: 2px;
-  background: #F97794;
+  background: #ff0000;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   transition: 0.3s;
@@ -150,7 +142,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 
 .btn-common {
-  background-color: #F97794;
+  background-color: #ff0000;
   position: relative;
   z-index: 1;
   padding: 12px 32px;
@@ -194,7 +186,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 .btn-border:hover {
   color: #ffffff;
-  background-color: #F97794;
+  background-color: #ff0000;
 }
 
 .btn-lg {
@@ -340,7 +332,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #F97794;
+  background-color: #ff0000;
   opacity: 0.6;
   position: absolute;
   top: 0;
@@ -393,7 +385,7 @@ button:focus {
   font-size: 14px;
   text-align: center;
   border-radius: 30px;
-  background-color: #F97794;
+  background-color: #ff0000;
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
@@ -410,7 +402,7 @@ button:focus {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: #F97794;
+  background: #ff0000;
   opacity: 0.5;
   filter: alpha(opacity=80);
 }
@@ -459,11 +451,11 @@ button:focus {
 
 .menu-bg .menu-button:hover {
   cursor: pointer;
-  color: #F97794;
+  color: #ff0000;
 }
 
 .menu-bg .logo-menu a {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .menu-bg .navbar-nav .nav-link {
@@ -471,11 +463,11 @@ button:focus {
 }
 
 .menu-bg .navbar-nav .nav-link:hover {
-  color: #F97794 !important;
+  color: #ff0000 !important;
 }
 
 .menu-bg .navbar-nav .active {
-  color: #F97794 !important;
+  color: #ff0000 !important;
 }
 
 .menu-button:hover {
@@ -496,11 +488,11 @@ button:focus {
 
 .bg-white .menu-button:hover {
   cursor: pointer;
-  color: #F97794;
+  color: #ff0000;
 }
 
 .bg-white .logo-menu a {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .bg-white .navbar-nav .nav-link {
@@ -508,11 +500,11 @@ button:focus {
 }
 
 .bg-white .navbar-nav .nav-link:hover {
-  color: #F97794 !important;
+  color: #ff0000 !important;
 }
 
 .bg-white .navbar-nav .active {
-  color: #F97794 !important;
+  color: #ff0000 !important;
 }
 
 .close-button {
@@ -534,7 +526,7 @@ button:focus {
   left: 0;
   width: 0;
   height: 2px;
-  background: #F97794;
+  background: #ff0000;
   -webkit-transition: 0.3s;
   -moz-transition: 0.3s;
   transition: 0.3s;
@@ -552,7 +544,7 @@ button:focus {
 .navbar-expand-md .navbar-nav .nav-link:focus,
 .navbar-expand-md .navbar-nav .nav-link:hover,
 .navbar-expand-md .navbar-nav .nav-link:hover:before {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .navbar-expand-md .navbar-nav .active > .nav-link,
@@ -560,11 +552,11 @@ button:focus {
 .navbar-expand-md .navbar-nav .nav-link.active:before,
 .navbar-expand-md .navbar-nav .nav-link.open,
 .navbar-expand-md .navbar-nav .open > .nav-link {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .navbar-expand-md .navbar-toggler {
-  background: #F97794;
+  background: #ff0000;
   border-radius: 0px;
   margin: 5px;
   cursor: pointer;
@@ -596,8 +588,8 @@ button:focus {
 }
 
 .navbar-expand-md .navbar-toggler:active {
-  border: 1px solid #F97794;
-  color: #F97794;
+  border: 1px solid #ff0000;
+  color: #ff0000;
 }
 
 /* ==========================================================================
@@ -617,7 +609,7 @@ button:focus {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: #F97794;
+  background: #ff0000;
   opacity: 0.7;
 }
 
@@ -665,7 +657,7 @@ button:focus {
 }
 
 .hero-area .banner_bottom_btn i:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .intro-img {
@@ -855,7 +847,7 @@ button:focus {
 }
 
 #video-area .banner_bottom_btn i:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 /* ==========================================================================
@@ -879,7 +871,7 @@ button:focus {
 }
 
 #about .box-item .icon i {
-  color: #F97794;
+  color: #ff0000;
   display: inline-block;
   font-size: 36px;
   margin-bottom: 20px;
@@ -1055,8 +1047,8 @@ button:focus {
 }
 
 .controls .active {
-  color: #F97794 !important;
-  border-color: #F97794;
+  color: #ff0000 !important;
+  border-color: #ff0000;
   background: transparent;
 }
 
@@ -1154,7 +1146,7 @@ button:focus {
 .item-boxes .icon i {
   font-size: 30px;
   line-height: 60px;
-  color: #F97794;
+  color: #ff0000;
 }
 
 .item-boxes h4 {
@@ -1254,7 +1246,7 @@ button:focus {
 }
 
 .services-item .services-content h3 a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .services-item:hover {
@@ -1308,7 +1300,7 @@ button:focus {
   font-size: 32px;
   text-align: center;
   margin-bottom: 30px;
-  color: #F97794;
+  color: #ff0000;
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
@@ -1327,7 +1319,7 @@ button:focus {
 }
 
 .featured-bg .featured-item h3 a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 /* ==========================================================================
@@ -1344,7 +1336,7 @@ button:focus {
 
 .featured-box .featured-icon i {
   font-size: 30px;
-  color: #F97794;
+  color: #ff0000;
   text-align: center;
   float: left;
   margin-right: 25px;
@@ -1446,7 +1438,7 @@ button:focus {
   line-height: 34px;
   text-align: center;
   width: 34px;
-  color: #F97794;
+  color: #ff0000;
   font-size: 14px;
   background: #fff;
   border-radius: 50px;
@@ -1520,7 +1512,7 @@ button:focus {
 }
 
 .testimonial-item .author .author-info h2 a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .testimonial-item .content-inner {
@@ -1533,7 +1525,7 @@ button:focus {
 }
 
 .testimonial-item .content-inner span {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .owl-pagination {
@@ -1567,7 +1559,7 @@ button:focus {
 }
 
 .owl-theme .owl-controls .owl-page.active span, .owl-theme .owl-controls.clickable .owl-page:hover span {
-  background: #F97794;
+  background: #ff0000;
 }
 
 /* ==========================================================================
@@ -1712,7 +1704,7 @@ button:focus {
   color: #fff;
   font-size: 24px;
   display: inline-block;
-  background: #F97794;
+  background: #ff0000;
   border-radius: 30px;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
@@ -1821,7 +1813,7 @@ button:focus {
 }
 
 #blog .blog-item-text h3 a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .meta-tags {
@@ -1843,7 +1835,7 @@ button:focus {
 }
 
 .meta-tags span a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 /* ==========================================================================
@@ -1941,7 +1933,7 @@ button:focus {
 }
 
 .post-meta ul li a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 /* ==========================================================================
@@ -1961,7 +1953,7 @@ button:focus {
 }
 
 .form-control:focus {
-  border: 1px solid #F97794;
+  border: 1px solid #ff0000;
   outline: none;
   box-shadow: none;
 }
@@ -1980,7 +1972,7 @@ textarea {
 
 .contact-info i {
   font-size: 20px;
-  color: #F97794;
+  color: #ff0000;
 }
 
 .contact-info h5 {
@@ -2031,7 +2023,7 @@ textarea {
 .toggle-map {
   height: 5px;
   width: 100%;
-  background-color: #F97794;
+  background-color: #ff0000;
   bottom: 0px;
   text-align: center;
   position: absolute;
@@ -2046,7 +2038,7 @@ textarea {
   -webkit-border-radius: 100%;
   border-radius: 100%;
   background-color: #fff;
-  border: #F97794 3px solid;
+  border: #ff0000 3px solid;
   position: relative;
   top: -46px;
 }
@@ -2071,7 +2063,7 @@ textarea {
   transition: all 0.3s;
   z-index: 101;
   width: 100%;
-  border-top: #F97794 3px solid;
+  border-top: #ff0000 3px solid;
 }
 
 #google-map.panel-show {
@@ -2085,9 +2077,24 @@ textarea {
   19. Subscribe Style
   ========================================================================== */
 #subscribe {
+
+  font-size: 13px;
+  line-height: 1.8;
+  color: #fff;
   background: url(../img/clients/plume.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  -ms-background-size: cover;
+  background-position: center center;
+  font-weight: 400;
+  font-family: 'Roboto Slab';
+  margin: 0px; 
   position: relative;
 }
+
 
 .subscribe-form .sub-title {
   margin-bottom: 5px;
@@ -2129,7 +2136,7 @@ textarea {
 .subscribe-form .form-wrapper .form-control:focus {
   color: #212121;
   background-color: #fff;
-  border-color: #F97794;
+  border-color: #ff0000;
   box-shadow: none;
   outline: 0;
 }
@@ -2152,7 +2159,7 @@ textarea {
 
 #subscribe .sub-item-box .icon-box i {
   font-size: 30px;
-  color: #F97794;
+  color: #ff0000;
 }
 
 #subscribe .sub-item-box .text-box {
@@ -2213,7 +2220,7 @@ footer .menu li a {
 }
 
 footer .menu li a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .contact-footer {
@@ -2241,7 +2248,7 @@ footer .menu li a:hover {
 }
 
 .contact-footer li span a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 .instagram-footer {
@@ -2266,7 +2273,7 @@ footer .menu li a:hover {
 }
 
 .footer-social li a {
-  background-color: #F97794;
+  background-color: #ff0000;
   border-radius: 50%;
   color: #fff;
   height: 32px;
@@ -2312,7 +2319,7 @@ footer .menu li a:hover {
 }
 
 #copyright p a:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 #copyright .nav-inline .nav-link {
@@ -2322,7 +2329,7 @@ footer .menu li a:hover {
 }
 
 #copyright .nav-inline .nav-link:hover {
-  color: #F97794;
+  color: #ff0000;
 }
 
 /* ==========================================================================
@@ -2377,7 +2384,7 @@ footer .menu li a:hover {
 
 .counter-item .icon i {
   font-size: 40px;
-  color: #F97794;
+  color: #ff0000;
 }
 
 .counter-item .fact-count h3 {
